--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "elisp/go-mode"]
 	path = elisp/go-mode
 	url = https://github.com/dominikh/go-mode.el.git
+[submodule "elisp/company-mode"]
+	path = elisp/company-mode
+	url = https://github.com/company-mode/company-mode.git
+[submodule "gocode"]
+	path = gocode
+	url = https://github.com/nsf/gocode.git
